syntax = "proto3";
package noble.router;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/strangelove-ventures/noble/x/router/types";

// StoreIBCForwardMetadata are stored so incoming mints can check for a forward message
// @param source_domain_sender
// @param nonce
// @param port
// @param channel
// @param destination_receiver
// @param ack_error
message StoreIBCForwardMetadata {
  string source_domain_sender = 1;
  uint64 nonce = 2;
  IBCForwardMetadata metadata = 3;
  bool ack_error = 4;
}

// IBCForwardMetadata is the information a user includes in their depositForBurnWithMetadata data field
// TODO
// @param port
// @param channel
// @param destination_receiver
// @param memo
// @param timeout_in_nanoseconds
message IBCForwardMetadata {
  string port = 1;
  string channel = 2;
  string destination_receiver = 3;
  string memo = 4;
  uint64 timeout_in_nanoseconds = 5;
}